# Librefy

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
data/themes/: librefy.css
src/: main.rs
src/player/: mod.rs
