[package]
name = "librefy"
version = "0.1.0"
description = "A modern, open-source music player for Linux - Because music is meant to be free"
authors = ["Librefy Team"]
license = "MIT"
repository = "https://github.com/Librefy/Librefy"
readme = "README.md"
edition = "2021"
rust-version = "1.70"

[dependencies]
gtk4 = { version = "0.7", features = ["v4_12"] }
libadwaita = "0.5"
gio = "0.18"
glib = "0.18"
gstreamer = "0.21"
gstreamer-player = "0.21"
gstreamer-audio = "0.21"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
